Add Watermark bypass PoC

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
-      <a href='dragstart-bypass.html'>Dragstart Bypass</a>
+      <p><a href='dragstart-bypass.html'>Dragstart Bypass</a></p>
+      <p><a href='watermark-bypass.html'>Watermark Bypass</a></p>
   </body>
 </html>
